<resources>
    <string name="app_name">Mis_Notitas</string>
    <string name="string_texto1_verNota">Información de la nota</string>
    <string name="string_boton1_verNota">VOLVER</string>
    <string name="string_boton2_verNota">BORRAR</string>

    <string name="string_texto1_crearNota">Escribe tu Nota</string>
    <string name="string_texto2_crearNota">Escribe tu Nota</string>
    <string name="string_boton1_crearNota">VOLVER</string>
    <string name="string_boton2_crearNota">CREAR</string>

    <string name="string_boton1_borrarNotas">BORRAR TODAS LAS NOTAS</string>
    <string name="string_boton2_borrarNotas">VOLVER</string>

    <string name="toast_texto1_borrarNotasActivity">Se han borrado todas las notas correctamente</string>

    <string name="toast_texto1_crearNotaActivity">Escriba su Nota</string>
    <string name="toast_texto2_crearNotaActivity">Contenido insertado correctamente</string>
    <string name="toast_texto3_crearNotaActivity">Error al insertar el producto</string>

    <string name="toast_texto1_listadoActivity">Aquí podrás crear tu nota</string>

    <string name="toast_texto1_verNotaActivity">Borrado correctamente</string>
    <string name="toast_texto2_verNotaActivity">Error al borrar la nota</string>
    <string name="toast_texto3_verNotaActivity">No he recibido ningún paquete</string>
</resources>